--- a/test/stylesheet.css
+++ b/test/stylesheet.css
@@ -2,12 +2,10 @@ body {
   font-family: "Avenir Next";
 }
 
-li {
-  list-style: none;
-  float: left;
-  padding: 33px 20px;
-
+.header-right a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
+
 
 .header {
   background-color: #26d0c9;
