ボタン機能をかっこよくした1

--- a/test/stylesheet.css
+++ b/test/stylesheet.css
@@ -5,10 +5,20 @@ body {
 .header-right a:hover {
   background-color: rgba(255, 255, 255, 0.3);
 }
-
+.header-right a {
+  line-height: 90px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+}
+.header-right{
+  float: right;
+}
 
 .header {
-  background-color: #26d0c9;
+  background-color: rgba(34, 49, 52, 0.9);
   color: #fff;
   height: 90px;
 }
