--- a/test/stylesheet.css
+++ b/test/stylesheet.css
@@ -29,3 +29,24 @@ body {
   padding: 20px 40px;
 
 }
+
+input,textarea{
+  width: 400px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  padding: 20px;
+  font-size: 18px;
+  border: 1px solid #dee7ec;
+}
+.login-form p{
+  font-size: 12px;
+  margin-top: 30px;
+}
+
+.login-submit{
+  background-color: #dee7ec;
+  color: #889eab;
+}
+.login-form {
+  padding-top: 100px;
+}
