--- a/test/stylesheet.css
+++ b/test/stylesheet.css
@@ -39,7 +39,7 @@ input,textarea{
   border: 1px solid #dee7ec;
 }
 .login-form p{
-  font-size: 12px;
+  font-size: 18px;
   margin-top: 30px;
 }
 
@@ -49,4 +49,7 @@ input,textarea{
 }
 .login-form {
   padding-top: 100px;
+}
+body{
+  padding: 20px;
 }
