--- a/wiki/public/default.css
+++ b/wiki/public/default.css
@@ -1,8 +1,9 @@
 h2 {
   border-bottom: 2px solid #c0c0ff; 
-  padding: 8px;
+  padding: 20px;
   background-color: #f0f0ff;
   padding-left: 8px;
+  margin-left: 8px;
 }
 
 blockquote {
